--- a/static/progress-indeterminate.html
+++ b/static/progress-indeterminate.html
@@ -18,6 +18,7 @@
   <link href="./dist/demo.min.css" rel="stylesheet" />
   <link href="./dist/bs-companion.min.css" rel="stylesheet" />
   <script src="./dist/bs-companion.min.js" type="module"></script>
+
 </head>
 
 <body>
@@ -28,18 +29,23 @@
     <h2>Indeterminate progress bars</h2>
 
     <p>Small</p>
+
     <div class="progress" role="progressbar" aria-label="Loading..." style="width:150px">
       <div class="progress-bar progress-bar-indeterminate"></div>
     </div>
 
     <hr>
     <p>Auto speed</p>
-    <div class="progress progress-ratio" role="progressbar" aria-label="Loading..." style="width:300px">
-      <div class="progress-bar progress-bar-indeterminate"></div>
-    </div>
+
+    <bs-progress>
+      <div class="progress progress-ratio" role="progressbar" aria-label="Loading..." style="width:300px">
+        <div class="progress-bar progress-bar-indeterminate"></div>
+      </div>
+    </bs-progress>
 
     <hr>
     <p>Manual speed = 3</p>
+
     <div class="progress" role="progressbar" aria-label="Loading..." style="--indeterminate-speed: 3">
       <div class="progress-bar progress-bar-indeterminate"></div>
     </div>
@@ -47,33 +53,44 @@
     <hr>
 
     <p>Auto speed (full width)</p>
-    <div class="progress progress-ratio" role="progressbar" aria-label="Loading...">
-      <div class="progress-bar progress-bar-indeterminate"></div>
-    </div>
+
+    <bs-progress>
+      <div class="progress progress-ratio" role="progressbar" aria-label="Loading...">
+        <div class="progress-bar progress-bar-indeterminate"></div>
+      </div>
+    </bs-progress>
 
     <hr>
 
     <p>Auto speed (half width)</p>
-    <div class="progress progress-ratio" role="progressbar" aria-label="Loading..." style="width:50%">
-      <div class="progress-bar progress-bar-indeterminate"></div>
-    </div>
 
+    <bs-progress>
+      <div class="progress progress-ratio" role="progressbar" aria-label="Loading..." style="width:50%">
+        <div class="progress-bar progress-bar-indeterminate"></div>
+      </div>
+    </bs-progress>
     <hr>
 
     <div dir="rtl">
       <p>Rtl</p>
-      <div class="progress progress-ratio" role="progressbar" aria-label="Loading...">
-        <div class="progress-bar progress-bar-indeterminate"></div>
-      </div>
+
+      <bs-progress>
+        <div class="progress progress-ratio" role="progressbar" aria-label="Loading...">
+          <div class="progress-bar progress-bar-indeterminate"></div>
+        </div>
+      </bs-progress>
     </div>
 
     <hr>
 
     <p>Easing</p>
 
-    <div id="demo-bar" class="progress progress-ratio" role="progressbar" aria-label="Loading...">
-      <div class="progress-bar progress-bar-indeterminate progress-bar-ease"></div>
-    </div>
+
+    <bs-progress>
+      <div id="demo-bar" class="progress progress-ratio" role="progressbar" aria-label="Loading...">
+        <div class="progress-bar progress-bar-indeterminate progress-bar-ease bg-warning"></div>
+      </div>
+    </bs-progress>
     <br />
     <button id="complete">Complete</button>
     <button id="start">Start</button>
@@ -82,6 +99,7 @@
       document.querySelector('#complete').addEventListener("click", (ev) => {
         const bar = document.querySelector('#demo-bar');
         const pbar = bar.firstElementChild;
+
         pbar.addEventListener('animationiteration', (ev) => {
           pbar.style.animationPlayState = "paused";
           pbar.style.animationFillMode = 'forwards';
@@ -92,18 +110,74 @@
       document.querySelector('#start').addEventListener("click", (ev) => {
         const bar = document.querySelector('#demo-bar');
         const pbar = bar.firstElementChild;
+
         pbar.style.animationPlayState = "running";
       });
-      const els = document.querySelectorAll('.progress-ratio');
-      els.forEach((el) => {
-        let ratio = el.offsetWidth / 300;
-        if (ratio > 8) ratio = ratio / 3;
-        if (ratio > 4) ratio = ratio / 2;
-        if (ratio < 0.5) ratio = 0.5;
-        ratio = ratio.toFixed(2);
-        el.style.setProperty('--indeterminate-speed', ratio);
-        console.log("ratio set to", ratio);
-      })
+    </script>
+
+    <hr>
+
+    <p>
+      navigation indicator (look at the top of the page when clicking on the button below)
+    </p>
+
+    <bs-progress id="full-page-load" style="visibility:hidden">
+      <div class="progress progress-top progress-ratio" role="progressbar" aria-label="Loading...">
+        <div class="progress-bar progress-bar-indeterminate">
+        </div>
+      </div>
+    </bs-progress>
+
+    <button id="nav-start">Start page load</button>
+    <button id="nav-complete">Page load complete</button>
+
+    <script type="module">
+
+      const restartAnimations = (element) => {
+        for (const animation of document.getAnimations()) {
+          if (element.contains(animation.effect.target)) {
+            animation.cancel();
+            animation.play();
+          }
+        }
+      };
+
+      const fp = document.querySelector('#full-page-load');
+      document.querySelector('#nav-complete').addEventListener("click", (ev) => {
+        Toasts.success("loaded");
+        const pbar = fp.firstElementChild.firstElementChild;
+
+        if (pbar.style.animationPlayState != "running") {
+          return;
+        }
+
+        // Increase speed
+        const ratio = pbar.style.getPropertyValue("--indeterminate-speed")
+        pbar.style.setProperty("--indeterminate-speed", ratio / 2);
+
+        pbar.addEventListener('animationiteration', (ev) => {
+          pbar.style.animationPlayState = "paused";
+          pbar.style.animationFillMode = 'forwards';
+          fp.style.visibility = "hidden";
+        }, {
+          once: true
+        })
+      });
+      document.querySelector('#nav-start').addEventListener("click", (ev) => {
+        Toasts.success("loading");
+        const pbar = fp.firstElementChild.firstElementChild;
+
+        // Reset ratio
+        const barCe = customElements.get('bs-progress');
+        barCe.setRatio(pbar);
+
+        // Reset anim
+        restartAnimations(pbar);
+
+        pbar.style.animationPlayState = "running";
+        fp.style.visibility = "visible";
+      });
+
     </script>
 
     <hr>
